--- a/Nhely/gitindex.html
+++ b/Nhely/gitindex.html
@@ -47,7 +47,7 @@
     </div>  
   </nav>
   <center>
-  <embed class="pdf" class="margo" height="510" width="700" src="git_v1.0.pdf">
+  <embed class="pdf" class="margo" height="600" width="900" src="git_v1.0.pdf">
   </center>
   <div class="container">
   <hr></hr>
@@ -56,16 +56,24 @@
 
   <article class="row">
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/XDKZu9kuEn8?si=GYYCQp5mBeiDm581" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <p></p>
+    <p>bevezetés</p>
     </div>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/_DpBYNQwQmU?si=njLnh5ZIitjC5oSB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    <p>verzio kezelo fajták</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/nOmw00Yh_to?si=rCJZt0Yll8XSwtQl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<p>git int</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/KqdZ1B8sS8k?si=BsAi9xW-mhZf0_WE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<p> a szinpad</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/X7rC62r9sGY?si=97U4wbmmbjs3S-hx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<p>távoli repository</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/4NsHUDrD2ek?si=ri8c-46vUpw6dUre" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<p>kapcsolodási modok</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/CCZ0Em1Vmdk?si=oIcPdRfwSr37oHd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<p>fájl kezelés</p>
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/JXnep31gM4I?si=lp3KPpB18oVZ_aIS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+branchek
     <div class="col-sm-6 col-lg-4"><iframe width="300" height="255" src="https://www.youtube.com/embed/Qe9Vu98MEWE?si=RdRU7eL9GUsYOuUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+    <p> összefoglalás</p>
   </article>
 </div>
 </div>
